--- a/F-RestApI/package.json
+++ b/F-RestApI/package.json
@@ -7,6 +7,7 @@
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "init": "^0.1.2",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
